--- a/4.html
+++ b/4.html
@@ -14,9 +14,9 @@
     <li><a href="4.html">여울</a></li>
 </ol>
 <br><br>
-<strong><h2> 햄슨</h2></strong>
-<img src="햄.jpg" width="300" height="300">
-<p>귀여운 햄토리입니다.</p>
+<strong><h2> 여울</h2></strong>
+<img src="울.jpg" width="300" height="300">
+<p>아직 안 태어났습니다.</p>
 
 </body>
 </html>
