--- a/1.html
+++ b/1.html
@@ -11,10 +11,11 @@
     <li><a href="1.html">윤혜</li></a>
     <li><a href="2.html">예원</li></a>
     <li><a href="3.html">햄슨</li></a>
+    <li><a href="4.html">여울</a></li>
 </ol>
 <br><br>
 <strong><h2> 윤혜</h2></strong>
-<img src="윤.png" width="300"></p>
+<img src="윤.png" width="300" height="300"></p>
 이것은 돈을 받고 있는 <a href="https://blog.naver.com/zzyq009/222788742254"
 target="_blank" title="이웃">정윤혜</a>입니다.<p>
 
