--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>윤씨</title>
+<title>문씨</title>
 <meta charset="utf-8">
 </head>
 
@@ -11,9 +11,11 @@
     <li><a href="1.html">윤혜</li></a>
     <li><a href="2.html">예원</li></a>
     <li><a href="3.html">햄슨</li></a>
+    <li><a href="4.html">여울</a></li>
 </ol>
 <br><br>
 <strong><h2> 예원</h2></strong>
+<img src="예.jpg" width="300" height="300">
 <p>그냥 예원입니다.</p>
 
 </body>
