--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>윤씨</title>
+<title>관계도</title>
 <meta charset="utf-8">
 </head>
 
@@ -11,6 +11,7 @@
     <li><a href="1.html">윤혜</li></a>
     <li><a href="2.html">예원</li></a>
     <li><a href="3.html">햄슨</li></a>
+    <li><a href="4.html">여울</a></li>
 </ol>
 
 </body>
