--- a/3.html
+++ b/3.html
@@ -4,7 +4,15 @@
 <title>문씨</title>
 <meta charset="utf-8">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9NBXTEFD9Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-9NBXTEFD9Y');
+</script>
 <body>
     <h1><a href="index.html">가족</h1></a>
 <ol>
